fixed new badge on icons in FeatureContainer, fixing text align on some sections

--- a/src/Components/FeaturesPage/style.scss
+++ b/src/Components/FeaturesPage/style.scss
@@ -29,6 +29,21 @@
     height: 80px;
     margin: 0 auto 1.5625rem auto;
   }
+
+  .new-feature {
+    position: absolute;
+    top: -10px;
+    margin-left: 30px;
+    color: #ffffff;
+    text-transform: uppercase;
+    display: inline-block;
+    border-radius: 999em;
+    padding: .5em .75em;
+    background: #d82435;
+    font-size: .75em;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 500;
+  }
   
   // p {
   //   color: rgba(55, 61, 72, 0.8) !important;
@@ -411,8 +426,8 @@
 
       &.active {
         left: calc(50% + 84px);
-        -webkit-transform: translateX(-50%) scale(1.2);
-        -webkit-filter: drop-shadow(0 40px 30px rgba(0, 0, 0, 0.5));
+        transform: translateX(-50%) scale(1.2);
+        filter: drop-shadow(0 40px 30px rgba(0, 0, 0, 0.5));
       }
 
       &.active .feature_clipboard_ios__zoomed__left_icon,
